<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/group_one"
        android:checkableBehavior="single" >
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/nav_home"
            android:title="@string/nav_home"/>
        <item
            android:id="@+id/nav_requests"
            android:icon="@drawable/nav_history"
            android:title="@string/nav_history" />
        <item
            android:id="@+id/nav_Recommendations"
            android:icon="@drawable/nav_notifications"
            android:title="@string/nav_notification" />
    </group>
    <group
        android:id="@+id/group_three"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/nav_about"
            android:title="@string/nav_about"
            />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/nav_settings"
            android:title="@string/nav_setting"
            />
        <item
            android:id="@+id/nav_log_out"
            android:icon="@drawable/nav_logout"
            android:title="@string/nav_logout"
            />
    </group>
</menu>
